# fastship

./: CHANGELOG.md  README.md  pyproject.toml
fastship/: __init__.py  release.py
tests/: test_labels.py  test_release.py
