[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastship"
dynamic = ["version"]
description = "Local-first release CLI tools: ship-bump, ship-pypi, ship-gh"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jeremy Howard" }]
keywords = ["release", "pypi", "github", "ghapi", "twine", "versioning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
  "fastcore>=1.5.29",
  "fastgit>=0.0.2",
  "ghapi>=1.0.5",
  "packaging>=23.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "pyyaml>=6.0",
  'tomli>=2.0.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Source = "https://github.com/answerdotai/fastship"

[project.scripts]
ship-bump = "fastship.release:ship_bump"
ship-pypi = "fastship.release:ship_pypi"
ship-changelog = "fastship.release:ship_changelog"
ship-gh = "fastship.release:ship_release_gh"
ship-release = "fastship.release:ship_release"
ship-new = "fastship.release:ship_new"
ship-pr = "fastship.release:ship_pr"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fastship = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "fastship.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["fastship*"]
